<resources>
    <string name="app_name">Vocabulary</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="vebrs">Verbs</string>
    <string name="sentences">Sentences</string>
    <string name="dictionary"><u>Dictionary</u></string>
    <string name="en_to_ru"><![CDATA[En > Ru]]></string>
    <string name="ru_to_en"><![CDATA[Ru > En]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="value">Value</string>
    <string name="definition">Definition</string>
    <string name="sample">Sample</string>
    <string name="translate">Translate</string>
</resources>
